# bundle-dissector

./: .gitignore  LICENSE  README.md  bundle-dissector.go  flake.nix  go.mod  go.sum  gomod2nix.toml
bundler-dissector-rs/: Cargo.toml
bundler-dissector-rs/src/: main.rs
c/: base64.js  chunk.txt  lsdir.json  main.c
go/: bundle-dissector.go  default.nix  go.sum  gomod2nix.toml
rs/: .gitignore  Cargo.toml
rs/src/: main.rs
