[package]
name = "bundler-dissector-rs"
version = "0.1.0"
authors = ["Andre Vallestero <andrevallesteor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
reqwest = { version = "0.11.5", default-features = false, features = ["json"] }
tokio = { version = "1.12.0", default-features = false, features = ["rt", "macros"] }
anyhow = { version = "1.0.44", default-features = false, features = ["std"] }